# codex

./: .cursorrules  ; cargo build --release -p codex-deep-research  ; cargo build --release -p codex-deep-research 2&1  Select-String -Pattern Finishedwarning.generated  AGENTS.md  CHANGELOG.md  CI_CD_SETUP_GUIDE.md  CODEX_FIX_PROMPT.md  COMPLETE_PR_SETUP.ps1  CURSOR_IDE_SETUP.md  CURSOR_INSTALL.md  CURSOR_INTEGRATION.md  CursorIDEに今すぐインストール.md  CUsersdownl.codexbin  FINAL_COMPLETION_SUMMARY.md  INSTALL_SUBAGENTS.md  MCP_TEST_GUIDE.md  META_PROMPT_FOR_GPT5.md  OPENAI_PR_GUIDE.md  PROJECT_COMPLETE_SUMMARY.md  PR作成手順_簡潔版.txt  PULL_REQUEST.md  QUICKSTART_DEEPRESEARCH.md  README.md  SEMANTIC_VERSIONING.md  SNS投稿文_LinkedIn_X.md  START_HERE.md  SUBAGENTS_QUICKSTART.md  SUBAGENT_QUICKSTART.md  VERSION  _debug_duckduckgo.html  _debug_duckduckgo_retry.html  _debug_duckduckgo_sample.html  apply-openai-pr-branch.ps1  auto-build-install.py  build-and-install.ps1  build-and-install.sh  build-install-commit.ps1  clean-build-install.ps1  commit-to-zapabob-main.ps1  copy-implementation-files.ps1  (+26 more)
.codex/: META_PROMPT_CONTINUOUS_IMPROVEMENT.md  README.md
.codex/agents/: code-reviewer.yaml  python-reviewer.yaml  researcher.yaml  sec-audit.yaml  test-gen.yaml  ts-reviewer.yaml  unity-reviewer.yaml
.codex/policies/: mcp.allowlist  net.allowlist
.codex/prompts/: meta-prompt.md  starter-kit.md
.cursor/: extensions.json  launch.json  mcp.json  rules.md  settings.json  tasks.json
_docs/: .build_checkpoint_20251010_221035.json  .build_checkpoint_20251010_222444.json  .build_checkpoint_20251010_222501.json  .build_checkpoint_20251010_223058.json  .build_checkpoint_20251010_223227.json  .build_checkpoint_20251010_223831.json  .build_checkpoint_20251010_224224.json  .build_checkpoint_20251011_004519.json  .build_checkpoint_20251011_004854.json  .build_checkpoint_20251011_010640.json  .build_checkpoint_20251011_011409.json  .build_checkpoint_20251011_012655.json  .build_checkpoint_20251011_014216.json  .build_checkpoint_20251011_014551.json  .build_checkpoint_20251011_020115.json  .build_checkpoint_20251011_031819.json  .build_checkpoint_20251011_103100.json  .build_checkpoint_20251011_104012.json  2025-10-07_30日スプリント実装計画.md  2025-10-07_Rust実装改善ロードマップ.md  2025-10-07_グローバルインストール手順.md  2025-10-07_サブエージェント・DeepResearch実装.md  2025-10-07_公式リポジトリ統合.md  2025-10-07_最終実装レポート.md  2025-10-08_CursorIDE統合完了.md  2025-10-08_Cursor統合_Multi-Agent機能.md  2025-10-08_Cursor統合完了ガイド.md  2025-10-08_E2Eテスト結果レポート.md  2025-10-08_GitHub公開完了.md  2025-10-08_Git設定確認完了.md  2025-10-08_MCP_DeepResearch完全実装.md  2025-10-08_OpenAI公式PR提出ガイド.md  2025-10-08_PR準備完了レポート.md  2025-10-08_Rust実装改善完了レポート.md  2025-10-08_codex-main実装完了.md  2025-10-08_npm-パッケージ化完了.md  2025-10-08_グローバルインストール・CursorIDE統合.md  2025-10-08_グローバルインストール完了.md  2025-10-08_全機能実装完了_最終レポート.md  2025-10-08_完全実装完了_最終版.md  (+82 more)
artifacts/: cross_checks.json  extracts.json  plan.md  report.md
codex-cli/: PUBLISH.md  _debug_duckduckgo_retry.html  package.json
codex-rs/: Cargo.toml  build_error.txt
codex-rs/deep-research/: Cargo.toml  README.md  test_results_visualization.py
codex-rs/deep-research/benches/: performance.rs
codex-rs/deep-research/mcp-server/: web-search.js
codex-rs/deep-research/src/: contradiction.rs  gemini_search_provider.rs  lib.rs  mcp_search_provider.rs  pipeline.rs  planner.rs  provider.rs  strategies.rs  types.rs  url_decoder.rs  web_search_provider.rs
codex-rs/deep-research/tests/: integration_deep_research.rs  integration_web_search.rs  test_duckduckgo.rs
codex-rs/rmcp-client/: Cargo.toml
codex-rs/rmcp-client/src/: rmcp_client.rs  utils.rs
codex-rs/supervisor/: Cargo.toml  README.md
codex-rs/supervisor/benches/: agent_parallel.rs
codex-rs/supervisor/src/: agent_prompts.rs  aggregator.rs  assigner.rs  async_subagent.rs  autonomous_dispatcher.rs  codex_executor.rs  executor.rs  integrated.rs  lib.rs  planner.rs  real_subagent.rs  real_subagent_with_executor.rs  subagent.rs  thinking_process.rs  token_tracker.rs  types.rs
codex-rs/supervisor/tests/: codex_executor_tests.rs  comprehensive_async_subagent_tests.rs  integration_tests.rs  real_subagent_with_executor_tests.rs
cursor-integration/: README.md  settings.json
docs/: REQUIREMENTS_SPECIFICATION.md  ci-speedup-playbook.md  codex-subagents-deep-research.md  config.md  gemini-cli-integration.md
rmcp-0.1.5/: .cargo_vcs_info.json  Cargo.toml  README.md
rmcp-0.5.0/: .cargo_vcs_info.json  Cargo.toml
scripts/: README.md  bump-version.ps1  ci-diff-targets.sh  new-implementation-log.ps1  security-audit.sh  sync-upstream.sh
test-results/: test1_codeexpert.md  実行ログ.md
test-workspace/: sample_code.rs
vscode-extension/: README.md  package-lock.json  package.json
windsurf-extension/: README.md  package.json  tsconfig.json
(+122 files in other folders)
