[package]
edition.workspace = true
name = "codex-deep-research"
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
regex = "1.11"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
pretty_assertions.workspace = true
tokio-test.workspace = true

[[bench]]
harness = false
name = "performance"
