[package]
edition = "2024"
name = "codex-rmcp-client"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
] }
dirs = { workspace = true }
futures = { workspace = true, features = ["std"] }
keyring = { version = "3.0", features = [
    "apple-native",
    "crypto-rust",
    "linux-native-async-persistent",
    "windows-native",
] }
mcp-types = { path = "../mcp-types" }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
rmcp = { workspace = true, features = [
    "auth",
    "base64",
    "client",
    "macros",
    "reqwest",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tiny_http = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "io-std",
    "time",
] }
tracing = { workspace = true, features = ["log"] }
urlencoding = { workspace = true }
webbrowser = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
