[package]
name = "codex-supervisor"
version = "0.47.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
pretty_assertions.workspace = true
tokio-test.workspace = true
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "agent_parallel"
harness = false
